--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1 {
     margin-bottom: 0;
     -webkit-text-stroke: 0.6px rgb(255, 255, 190);
     color: transparent;
-    text-shadow: 2px 2px 0 rgb(218, 161, 6);
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1), 3px 2px 0 rgb(218, 161, 6);
 }
 
 .lyrics p {
@@ -39,7 +39,6 @@ h1 {
 
 iframe {
     position: relative;
-    /* box-shadow: 4px 4px 25px rgba(255, 255, 190, 0.1);     */
 }
 
 .lyrics {
